Update quickstart doc to airlift